--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
 <p> CIAO HEROKU! </p>
+<img src:"https://www.google.it/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjStczPnqzXAhVKORoKHcRjBTUQjRwIBw&url=https%3A%2F%2Fwww.livescience.com%2F45005-banana-nutrition-facts.html&psig=AOvVaw0W-QkbAiGbq8vFAoyOPu0F&ust=1510136395237371"!>
 
 {% endblock %}
