--- a/web/views/articolo.html
+++ b/web/views/articolo.html
@@ -1,4 +1,4 @@
-<h1> DrownR Blog </h1>
+<h1 align="center" color="red"> La vendetta dei F.G. (Frutti Gialli) colpisce l'opinione pubblica. </h1>
 <p align="center">
 Ogni giorno, una banana muore per essere divorata da un umano o un animale. <br>
 Diciamo basta a questa follia, smetti anche te di mangiare le banane.
