--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -7,7 +7,9 @@
 <body>
   {% include 'nav.html' %}
 
-  {% include 'articolo.html' %}
+  <div>
+    {% include 'articolo.html' %}
+  </div>
   
 </body>
 </html>
