--- a/web/views/articolo.html
+++ b/web/views/articolo.html
@@ -1,5 +1,10 @@
 <h1 align="center" color="red"> La vendetta dei F.G. (Frutti Gialli) colpisce l'opinione pubblica. </h1>
 <p align="center">
-Ogni giorno, una banana muore per essere divorata da un umano o un animale. <br>
+Ogni giorno, una banana muore per essere divorata da un umano o un animale.
 Diciamo basta a questa follia, smetti anche te di mangiare le banane.
+E' ormai risaputo che dopo l'avventata mossa di mercato del CMFG (Comitato Mangiatori Frutti Gialli) che prevedeva un sostanziale
+incremento nel consumo di banane da parte dei cittadini italiani e non, gli F.G. son scesi in piazza.
+Dopo una violenta repressione e confinamento dei protestanti da parte dello Stato Italiano, la situazione sembrava stabile, almeno fino
+ad oggi, quando una giallissima auto-bomba è esplosa di fronte al parlamento ferendo gravemente molti deputati e rovinando indelebilmente
+quasi tutti i monumenti della zona, ormai ricoperti da uno spesso strato di polpa gialla.
 </p>
